# cmake-course

./: .gitmodules  README.md
01-cpp-project-template/: CMakeLists.txt
02-basic-project/: CMakeLists.txt  README.md
02-basic-project/src/: my_lib.cpp
03-intermediate-project/src/my-lib/: CMakeLists.txt
04-variables-options/: CMakeLists.txt
04-variables-options/src/my-lib/: CMakeLists.txt
05-configure-file/app/: main.cpp
06-sources-and-headers/: CMakeLists.txt  README.md
07-external-git/: Makefile  README.md
07-external-git/app/: main.cpp
07-external-git/cmake/: AddGitSubmodule.cmake
08-fetch-content/: CMakeLists.txt  README.md
08-fetch-content/app/: CMakeLists.txt
08-fetch-content/config/: config.hpp.in
08-fetch-content/src/: CMakeLists.txt
08-fetch-content/src/my-lib/: CMakeLists.txt
09-doxygen/: CMakeLists.txt  README.md
09-doxygen/app/: CMakeLists.txt
09-doxygen/src/my_lib/: CMakeLists.txt  my_lib.cpp
1-cpp-project-template/src/: main.cpp
10-unit-test/: CMakeLists.txt  README.md
10-unit-tests/: CMakeLists.txt
10-unit-tests/app/: main.cpp
10-unit-tests/src/my_lib/: CMakeLists.txt  my_lib.cpp
11-warnings/: CMakeLists.txt  README.md
11-warnings/app/: CMakeLists.txt
11-warnings/src/my_lib/: CMakeLists.txt  my_lib.cc  my_lib.cpp
11a-compile-definitions/: CMakeLists.txt  README.md
11a-compile-definitions/cmake/: Warnings.cmake
11a-compile-definitions/src/my_lib/: CMakeLists.txt  my_lib.cc  my_lib.cpp
11a-compile-definitions/tests/: main.cpp
12-sanitizers/: CMakeLists.txt  README.md
12-sanitizers/app/: CMakeLists.txt  main.cpp
12-sanitizers/cmake/: Warnings.cmake
12-sanitizers/src/my_lib/: CMakeLists.txt  my_lib.cpp
13-lto/: CMakeLists.txt  README.md
13-lto/app/: CMakeLists.txt  main.cpp
13-lto/cmake/: LTO.cmake  Sanitizers.cmake
13-lto/src/my_lib/: CMakeLists.txt
2-basic-project/src/: main.cpp
3-intermediate-project/: CMakeLists.txt  README.md
3-intermediate-project/app/: CMakeLists.txt
3-intermediate-project/src/: CMakeLists.txt
4-variables-options/: README.md
5-configure-file/: README.md
5-configure-file/src/my-lib/: CMakeLists.txt
6-sources-and-headers/config/: CMakeLists.txt
7-external-git/: CMakeLists.txt
basic-project/: README.md
cpp-project-template/: README.md
